:rotating_light: Fixed a bug and some compiler warnings